--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "pgapp",
+  "name": "node-api-postgres",
   "version": "1.0.0",
-  "description": "",
+  "description": "RESTful API with Node.js, Express, and PostgreSQL",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
     "pg": "^7.4.3"
